# vuln-compare

./: .gitignore  README.md  pyproject.toml
scripts/: create_unified_models_dump.py
tests/: ghsa_test.py  glad_test.py  nvd_test.py
vuln_compare/: analyze.py  cli.py  load.py  model.py  unify.py  util.py
