[tool.poetry]
name = "vuln_compare"
version = "0.1.0"
description = ""
authors = ["Nikita Pivkin <delatornikita@gmail.com>"]

[tool.poetry.scripts]
vuln-compare = "vuln_compare.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]